# Fenestra

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: publish.yml
crates/fenestra-bridge/: Cargo.toml  LICENSE-MIT
crates/fenestra-bridge/src/: activity.rs  bridge.rs  lib.rs  metrics.rs  web_bridge.js  web_bridge.rs
crates/fenestra-cef/: Cargo.toml
crates/fenestra-cef/host/linux/: CMakeLists.txt  app.cc  app.h  handler.cc  handler.h  main.cc  osr_handler.cc  osr_handler.h
crates/fenestra-cef/host/shared/: CMakeLists.txt  app.cc  handler.cc  main.cc  osr_handler.cc  osr_handler.h
crates/fenestra-cef/src/: activity.rs  bridge.rs  desktop_services.rs  desktop_services_stub.rs  host.rs  lib.rs  metrics.rs  osr.rs  osr_frame_buffer.rs  osr_host.rs  osr_layer_host.rs  osr_protocol.rs  osr_stub.rs  process_tree.rs  style.rs
crates/fenestra-cef/src/osr_layer_host/: alpha.rs  buffer.rs  forward.rs  input.rs  shell.rs  socket.rs
crates/fenestra-cef/src/render/: display_list.rs  gpu.rs  rect_pipeline.rs
crates/fenestra-cli/: Cargo.toml
crates/fenestra-cli/src/: bundle.rs  icon_assets.rs  main.rs  runtime.rs  source_assets.rs  source_desktop.rs  source_install.rs  template.rs
crates/fenestra-cli/src/bundle/: config.rs  metadata.rs  package.rs  stage.rs
crates/fenestra-platform/: Cargo.toml
crates/fenestra-platform/src/: lib.rs  shell.rs
crates/fenestra-platform/src/platform/: wayland_background_effect.rs
crates/fenestra-runtime/: Cargo.toml
crates/fenestra-runtime/src/: lib.rs
crates/fenestra-webview2/: Cargo.toml  README.md
crates/fenestra-webview2/src/: lib.rs  stub.rs
crates/fenestra-webview2/src/windows/: bridge.rs  host_controls.rs  launch.rs  mod.rs  regions.rs
crates/stuk-fenestra/: Cargo.toml
crates/stuk-fenestra/src/: lib.rs  osr.rs  osr_host.rs  osr_protocol.rs
docs/: implementation-guide.md
examples/fenestra-notes/: Cargo.toml
examples/fenestra-notes/src/: main.rs
examples/fenestra-notes/ui/: index.html  styles.css
examples/stuk-notes/: Cargo.toml  Stuk.toml
examples/stuk-notes/src/: main.rs
examples/stuk-notes/ui/: app.js  styles.css
scripts/: publish.sh
