[workspace]
resolver = "3"
members = [
    "crates/fenestra-runtime",
    "crates/fenestra-cef",
    "crates/fenestra-cli",
    "crates/stuk-fenestra",
    "examples/fenestra-notes",
    "examples/stuk-notes",
]
default-members = [
    "crates/fenestra-runtime",
    "crates/fenestra-cef",
    "crates/fenestra-cli",
    "examples/fenestra-notes",
]

[workspace.package]
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
fenestra-runtime = { path = "crates/fenestra-runtime" }
fenestra-cef = { path = "crates/fenestra-cef" }
stuk-fenestra = { path = "crates/stuk-fenestra" }

stuk = { path = "../stuk/crates/stuk" }
stuk-platform = { path = "../stuk/crates/stuk-platform" }
stuk-platform-shell = { path = "../stuk/crates/stuk-platform-shell" }
stuk-render = { path = "../stuk/crates/stuk-render" }
stuk-style = { path = "../stuk/crates/stuk-style" }

ashpd = { version = "0.13.11", features = ["global_shortcuts"] }
futures-util = "0.3.31"
layershellev = "0.18.1"
ksni = { version = "0.3.4", features = ["blocking"] }
libc = "0.2.186"
pollster = "0.4.0"
clap = { version = "4.6.1", features = ["derive"] }
raw-window-handle = "0.6.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["rt", "sync", "time", "macros"] }
toml = "1.1.2"
wayland-client = "0.31.14"
winit = "0.31.0-beta.2"
x11rb = "0.13.2"
