[package]
name = "fenestra-bridge"
description = "Engine-neutral Fenestra bridge, activity, and web page IPC primitives shared by fenestra-cef and fenestra-webview2"
keywords = ["fenestra", "bridge", "ipc", "webview", "desktop"]
categories = ["api-bindings", "web-programming"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
