[package]
name = "fenestra-cef"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CEF backend for Fenestra webview windows"

[dependencies]
fenestra-runtime.workspace = true
futures-util.workspace = true
libc.workspace = true
pollster.workspace = true
raw-window-handle.workspace = true
serde_json.workspace = true
stuk-platform.workspace = true
stuk-platform-shell.workspace = true
stuk-render.workspace = true
stuk-style.workspace = true
thiserror.workspace = true
tokio.workspace = true
winit.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
ashpd.workspace = true
ksni.workspace = true
layershellev.workspace = true
wayland-client.workspace = true
