[package]
name = "fenestra-cef"
description = "CEF (Chromium Embedded Framework) backend for Fenestra cross-platform webview windows"
keywords = ["fenestra", "cef", "chromium", "webview", "desktop"]
categories = ["gui", "rendering", "web-programming"]
include = [
    "src/**/*",
    "host/shared/**/*",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
fenestra-runtime.workspace = true
fenestra-bridge.workspace = true
fenestra-platform.workspace = true
bytemuck.workspace = true
futures-util.workspace = true
glyphon.workspace = true
image.workspace = true
libc.workspace = true
pollster.workspace = true
raw-window-handle.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
wgpu.workspace = true
winit.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
ashpd.workspace = true
ksni.workspace = true
layershellev.workspace = true
wayland-client.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
fenestra-webview2.workspace = true
