[package]
name = "fenestra-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "fenestra"
path = "src/main.rs"

[dependencies]
clap.workspace = true
fenestra-runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
