[package]
name = "fenestra-cli"
description = "Fenestra CLI: runtime install, app templates, source installs, and bundle staging"
keywords = ["fenestra", "cef", "cli", "bundle", "desktop"]
categories = ["command-line-utilities", "development-tools"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"

[[bin]]
name = "fenestra"
path = "src/main.rs"

[dependencies]
clap.workspace = true
fenestra-runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
