[package]
name = "fenestra-platform"
description = "Window, shell, region, and desktop integration primitives for Fenestra"
keywords = ["fenestra", "platform", "window", "desktop"]
categories = ["gui", "os"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
raw-window-handle.workspace = true
winit.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true
