[package]
name = "fenestra-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared web runtime detection, installation, and management for Fenestra"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
