[package]
name = "fenestra-runtime"
description = "Shared web runtime detection, installation, validation, and pruning for Fenestra (Chromium Embedded Framework)"
keywords = ["fenestra", "cef", "chromium", "runtime", "webview"]
categories = ["gui", "web-programming"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
